# aero-lab

./: .gitignore  FEATURES.md  Makefile  README.md  docker-compose.yml
apps/api/: Cargo.toml
apps/api/migrations/: 0001_init.sql  0002_rider_platform.sql
apps/api/src/: config.rs  error.rs  main.rs  router.rs
apps/api/src/domains/: mod.rs
apps/api/src/domains/consultation/: handlers.rs  mod.rs  model.rs  repository.rs  router.rs  telegram.rs
apps/api/src/domains/fitting/: engine.rs  handlers.rs  mod.rs  model.rs  router.rs
apps/api/src/domains/products/: handlers.rs  mod.rs  model.rs  repository.rs  router.rs
apps/api/src/domains/sessions/: handlers.rs  mod.rs  model.rs  router.rs
apps/api/src/domains/storage/: client.rs  handlers.rs  mod.rs  router.rs
apps/api/src/middleware/: auth.rs  mod.rs
apps/web/: package-lock.json  package.json
apps/web/messages/: en.json  vi.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/[locale]/aero/: AeroCalculator.tsx  page.tsx
apps/web/src/app/[locale]/compare/: page.tsx
apps/web/src/app/[locale]/consult/: ConsultForm.tsx  page.tsx
apps/web/src/app/[locale]/dashboard/: page.tsx
apps/web/src/app/[locale]/fitting/: FitForm.tsx  page.tsx
apps/web/src/app/[locale]/login/: page.tsx
apps/web/src/app/[locale]/products/: page.tsx
apps/web/src/components/3d/: ProductViewer.tsx
apps/web/src/components/dashboard/: ActivityFeed.tsx  PerformanceCard.tsx
apps/web/src/components/layout/: Nav.tsx
apps/web/src/components/ui/: CompareButton.tsx  LanguageSwitcher.tsx  ProductCard.tsx  SpeedLines.tsx  TelegramFloat.tsx  Tooltip.tsx
apps/web/src/i18n/: request.ts
apps/web/src/lib/: api.ts  fitEngine.ts  physicsEngine.ts
apps/web/src/lib/__tests__/: physicsEngine.test.ts
apps/web/src/lib/supabase/: server.ts
(+10 files in other folders)
