[package]
name = "bigkid-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ─── Web framework ────────────────────────────────────────────────────────────
axum            = { version = "0.7", features = ["ws", "multipart"] }
tower           = "0.5"
tower-http      = { version = "0.6", features = ["cors", "trace"] }

# ─── Async runtime ────────────────────────────────────────────────────────────
tokio           = { version = "1", features = ["full"] }

# ─── Serialization ────────────────────────────────────────────────────────────
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# ─── Database ─────────────────────────────────────────────────────────────────
sqlx            = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }

# ─── Error handling ───────────────────────────────────────────────────────────
thiserror       = "2"
anyhow          = "1"
jsonwebtoken    = "9"

# ─── Types ────────────────────────────────────────────────────────────────────
uuid            = { version = "1", features = ["v7", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
url             = "2"

# ─── Config / Env ─────────────────────────────────────────────────────────────
dotenvy         = "0.15"

# ─── Storage (MinIO / S3) ─────────────────────────────────────────────────────
object_store    = { version = "0.11", features = ["aws"] }

# ─── Telegram Bot ─────────────────────────────────────────────────────────────
teloxide        = { version = "0.13", features = ["macros"] }

# ─── Observability ────────────────────────────────────────────────────────────
tracing                 = "0.1"
tracing-subscriber      = { version = "0.3", features = ["env-filter"] }
